--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 <div class="navbar">
 
-    <nav class="navbar-default navbar-fixed-top">
+    <nav class="navbar-default">
       <div class="container">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -11,7 +11,6 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/index.html">blog</a></li>
             <li><a href="/about.html">about</a></li>
-            <li><a href="/photo-gallery.html">portfolio</a></li>
             <li><a href="/now.html">now</a></li>
 
           </ul>
