--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,10 @@
 
   <body>
 
-    <div class="container">
 
     {% include header.html %}
 
-   
+    <div class="content">
      
         {{ content }}
     
