--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
  <!-- Extend footer across width of page, color, troubleshoot FA icons -->    
       
 
-      <footer>
+      <footer class="site-footer">
+        <div class="wrapper">
           <div class="col-md-6 copyright">
             <p>This is a blog and portfolio by Tanisha Hampden. This Jekyll site was built with love, Sublime 2, and bootstrap.</p>
 
@@ -25,6 +26,7 @@
             <a href="https://www.linkedin.com/in/tanisha-hampden-53b74634">
               <i class="fa fa-linkedin fa-1x fa-border " aria-hidden="true "></i>
             </a>
+          </div>
           </div>
       </footer>
 
