--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@ layout: default
 
     {% include footer.html %}
 
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+
   </body>
 
 </html>
