--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,16 @@
 layout: default
 ---
 
+
 <div class="content">
 	<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
 	  <header class="post-header">
 	    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
 	    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+
+	    <p class="reading-time"> Read Time: {% include read_time.html %} </p>
+
 	  </header>
 <hr>
 	  <div class="post-content" itemprop="articleBody">
