adjust read time

--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,8 +1,9 @@
 <span class="reading-time" title="Estimated read time">
   {% assign words = content | number_of_words %}
-  {% if words < 360 %}
-    1 min
+  {% if words < 270 %}
+    1 minute
   {% else %}
-    {{ words | divided_by:180 }} mins
+    {{ words | divided_by:135 }} minutes
   {% endif %}
 </span>
+
