--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 	    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
 	    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
 
-	    <p class="reading-time"> Read Time: {% include read_time.html %} </p>
+	    <p class="reading-time"> est. read time: {% include read_time.html %} </p>
 
 	  </header>
 <hr>
