--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,11 @@ layout: default
         {{ content }}
     
     </div>
+  
+    <div class="right-sidebar">
+      
+    </div>
+    
 
     {% include footer.html %}
 
