update social media accts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,15 +11,15 @@
           </div>
 
           <div class="col-md-6" id="contact">
-            <a href="https://github.com/tanham21">
+            <a href="https://github.com/tanham">
               <i class="fa fa-github fa-1x fa-border " aria-hidden="true "></i>
             </a>
           
-            <a href="https://twitter.com/tanishahampden">
+            <a href="https://twitter.com/tanham_io">
               <i class="fa fa-twitter fa-1x fa-border " aria-hidden="true "></i>
             </a>
          
-            <a href="https://www.instagram.com/tanishahampden/">
+            <a href="https://www.instagram.com/tanham.io/">
               <i class="fa fa-instagram fa-1x fa-border " aria-hidden="true "></i>
             </a>
 
