--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,14 @@
+<!-- facebook SDK  -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=194773364343194";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- end facebook SDK  -->
+
 <!--add hamburber style menu for mobile-->
 
 <div class="navbar">
@@ -17,7 +28,7 @@
         </div>
     </nav>
 
-<script type="text/javascript">   
+<script type="text/javascript">
   colorLinks("#8912FF");
 
   function colorLinks(hexColor)
@@ -27,8 +38,8 @@
       {
           if(links[i].href)
           {
-              links[i].style.color = hexColor;  
+              links[i].style.color = hexColor;
           }
-      }  
+      }
   }
   </script>
